basic html with script

--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@ Comparing all the Manchester United Managers
 </head>
 
 <body>
-<button onclick="next">
-
+<button onclick="next()">
+    Next
 </button>
+
+
+
+
+<script>
+function next() {
+
+}
+</script>
+
 
 </body></html>
