basic html with script

--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <html>
+<script src='https://d3js.org/d3.v5.min.js'>
+</script>
+
+</script>
 <head>
 Comparing all the Manchester United Managers
 </head>
 
 <body>
-<button onclick="next()">
+<!-- <button onclick="next()">
     Next
-</button>
+</button> -->
 
 
 
 
 <script>
-function next() {
-
-}
+d3.select('body').append("button").text("NEXT")
 </script>
 
 
