basic button functionality fix

--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
 </script>
 
 </script>
-<head>
-Comparing all the Manchester United Managers
-</head>
-
+<p class="0">Summary of All Managers performance since Sir Alex Ferguson</p>
 <body>
 <!-- <button onclick="next()">
     Next
@@ -63,46 +60,44 @@ mode0Function();
 });
 
 function modeZero() {
-d3.select("body").html = "";
-d3.select("body").append("Manchester United Manager Statistics!");
-
-
+d3.select(".0").html = "";
+d3.select(".0").append("Summary of All Managers performance since Sir Alex Ferguson");
 }
 
 
 function modeOne() {
-d3.select("body").html = "";
-d3.select("body").append("SIR ALEX FERGUSON");
+d3.select(".0").html = "";
+d3.select(".0").append("SIR ALEX FERGUSON");
 
 
 
 }
 
 function modeTwo() {
-d3.select("body").html = "";
-d3.select("body").append("DAVID MOYEZ");
+d3.select(".0").html = "";
+d3.select(".0").append("DAVID MOYEZ");
 
 
 }
 
 
 function modeThree(){
-d3.select("body").html = "";
-d3.select("body").append("LOUIS VAN GAAL");
+d3.select(".0").html = "";
+d3.select(".0").append("LOUIS VAN GAAL");
 
 
 
 
 }
 function modeFour(){
-d4.select("body").html = "";
-d3.select("body").append("JOSE MOURINHO");
+d4.select(".0").html = "";
+d3.select(".0").append("JOSE MOURINHO");
 
 
 }
 function modeFive() {
-d4.select("body").html = "";
-d3.select("body").append("OLE GUNNAR SOLSKJAER");
+d4.select(".0").html = "";
+d3.select(".0").append("OLE GUNNAR SOLSKJAER");
 
 }
 
