--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@ mode0Function();
 }
 });
 
-function modeZero() {
+function mode0Function() {
 d3.select(".0").html = "";
 d3.select(".0").append("Summary of All Managers performance since Sir Alex Ferguson");
 }
 
 
-function modeOne() {
+function mode1Function() {
 d3.select(".0").html = "";
 d3.select(".0").append("SIR ALEX FERGUSON");
 
@@ -73,7 +73,7 @@ d3.select(".0").append("SIR ALEX FERGUSON");
 
 }
 
-function modeTwo() {
+function mode2Function() {
 d3.select(".0").html = "";
 d3.select(".0").append("DAVID MOYEZ");
 
@@ -81,7 +81,7 @@ d3.select(".0").append("DAVID MOYEZ");
 }
 
 
-function modeThree(){
+function mode3Function(){
 d3.select(".0").html = "";
 d3.select(".0").append("LOUIS VAN GAAL");
 
@@ -89,13 +89,13 @@ d3.select(".0").append("LOUIS VAN GAAL");
 
 
 }
-function modeFour(){
+function mode4Function(){
 d4.select(".0").html = "";
 d3.select(".0").append("JOSE MOURINHO");
 
 
 }
-function modeFive() {
+function mode5Function() {
 d4.select(".0").html = "";
 d3.select(".0").append("OLE GUNNAR SOLSKJAER");
 
