--- a/index.html
+++ b/index.html
@@ -60,44 +60,44 @@ mode0Function();
 });
 
 function mode0Function() {
-d3.select(".0").html = "";
-d3.select(".0").append("Summary of All Managers performance since Sir Alex Ferguson");
+d3.select("p.0").html = "";
+d3.select("p.0").append("Summary of All Managers performance since Sir Alex Ferguson");
 }
 
 
 function mode1Function() {
-d3.select(".0").html = "";
-d3.select(".0").append("SIR ALEX FERGUSON");
+d3.select("p.0").html = "";
+d3.select("p.0").append("SIR ALEX FERGUSON");
 
 
 
 }
 
 function mode2Function() {
-d3.select(".0").html = "";
-d3.select(".0").append("DAVID MOYEZ");
+d3.select("p.0").html = "";
+d3.select("p.0").append("DAVID MOYEZ");
 
 
 }
 
 
 function mode3Function(){
-d3.select(".0").html = "";
-d3.select(".0").append("LOUIS VAN GAAL");
+d3.select("p.0").html = "";
+d3.select("p.0").append("LOUIS VAN GAAL");
 
 
 
 
 }
 function mode4Function(){
-d4.select(".0").html = "";
-d3.select(".0").append("JOSE MOURINHO");
+d4.select("p.0").html = "";
+d3.select("p.0").append("JOSE MOURINHO");
 
 
 }
 function mode5Function() {
-d4.select(".0").html = "";
-d3.select(".0").append("OLE GUNNAR SOLSKJAER");
+d4.select("p.0").html = "";
+d3.select("p.0").append("OLE GUNNAR SOLSKJAER");
 
 }
 
