basic button functionality bug fix attempt-3

--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@ mode0Function();
 
 function mode0Function() {
 d3.select("p.0").html = "";
-d3.select("p.0").append("Summary of All Managers performance since Sir Alex Ferguson");
+d3.select("p.0").text("Summary of All Managers performance since Sir Alex Ferguson");
 }
 
 
 function mode1Function() {
 d3.select("p.0").html = "";
-d3.select("p.0").append("SIR ALEX FERGUSON");
+d3.select("p.0").text("SIR ALEX FERGUSON");
 
 
 
@@ -75,7 +75,7 @@ d3.select("p.0").append("SIR ALEX FERGUSON");
 
 function mode2Function() {
 d3.select("p.0").html = "";
-d3.select("p.0").append("DAVID MOYEZ");
+d3.select("p.0").text("DAVID MOYEZ");
 
 
 }
@@ -83,7 +83,7 @@ d3.select("p.0").append("DAVID MOYEZ");
 
 function mode3Function(){
 d3.select("p.0").html = "";
-d3.select("p.0").append("LOUIS VAN GAAL");
+d3.select("p.0").text("LOUIS VAN GAAL");
 
 
 
@@ -91,13 +91,13 @@ d3.select("p.0").append("LOUIS VAN GAAL");
 }
 function mode4Function(){
 d4.select("p.0").html = "";
-d3.select("p.0").append("JOSE MOURINHO");
+d3.select("p.0").text("JOSE MOURINHO");
 
 
 }
 function mode5Function() {
 d4.select("p.0").html = "";
-d3.select("p.0").append("OLE GUNNAR SOLSKJAER");
+d3.select("p.0").text("OLE GUNNAR SOLSKJAER");
 
 }
 
