--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <script src='https://d3js.org/d3.v5.min.js'>
 </script>
 <body>
-<p class="0">Summary of All Managers performance since Sir Alex Ferguson</p>
+<p>Summary of All Managers performance since Sir Alex Ferguson</p>
 <!-- <button onclick="next()">
     Next
 </button> -->
@@ -58,44 +58,48 @@ mode0Function();
 });
 
 function mode0Function() {
-d3.select("p.0").html = "";
-d3.select("p.0").text("Summary of All Managers performance since Sir Alex Ferguson");
+d3.select("p").html = "";
+d3.select("p").remove();
+d3.select("body").append("p").text("Summary of All Managers performance since Sir Alex Ferguson");
 }
 
 
 function mode1Function() {
-d3.select("p.0").html = "";
-d3.select("p.0").text("SIR ALEX FERGUSON");
+d3.select("p").html = "";
+d3.select("p").remove();
+d3.select("body").append("p").text("SIR ALEX FERGUSON");
 
 
 
 }
 
 function mode2Function() {
-d3.select("p.0").html = "";
-d3.select("p.0").text("DAVID MOYEZ");
+d3.select("p").html = "";
+d3.select("p").remove();
+d3.select("body").append("p").text("DAVID MOYEZ");
 
 
 }
 
 
 function mode3Function(){
-d3.select("p.0").html = "";
-d3.select("p.0").text("LOUIS VAN GAAL");
-
-
-
-
+d3.select("p").html = "";
+d3.select("p").remove();
+d3.select("p").append("p").text("LOUIS VAN GAAL");
 }
+
+
 function mode4Function(){
-d4.select("p.0").html = "";
-d3.select("p.0").text("JOSE MOURINHO");
+d4.select("p").html = "";
+d3.select("p").remove();
+d3.select("p").append("p").text("JOSE MOURINHO");
 
 
 }
 function mode5Function() {
-d4.select("p.0").html = "";
-d3.select("p.0").text("OLE GUNNAR SOLSKJAER");
+d4.select("p").html = "";
+d3.select("p").remove();
+d3.select("p").append("p").text("OLE GUNNAR SOLSKJAER");
 
 }
 
