basic button functionality bug fix attempt-3

--- a/index.html
+++ b/index.html
@@ -85,21 +85,21 @@ d3.select("body").append("p").text("DAVID MOYEZ");
 function mode3Function(){
 d3.select("p").html = "";
 d3.select("p").remove();
-d3.select("p").append("p").text("LOUIS VAN GAAL");
+d3.select("body").append("p").text("LOUIS VAN GAAL");
 }
 
 
 function mode4Function(){
 d4.select("p").html = "";
 d3.select("p").remove();
-d3.select("p").append("p").text("JOSE MOURINHO");
+d3.select("body").append("p").text("JOSE MOURINHO");
 
 
 }
 function mode5Function() {
 d4.select("p").html = "";
 d3.select("p").remove();
-d3.select("p").append("p").text("OLE GUNNAR SOLSKJAER");
+d3.select("body").append("p").text("OLE GUNNAR SOLSKJAER");
 
 }
 
