adding background color

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <script src='https://d3js.org/d3.v5.min.js'>
 </script>
-<body>
+<body style="background-color:red;">
 <p>Summary of All Managers performance since Sir Alex Ferguson</p>
 <!-- <button onclick="next()">
     Next
