adding manager picture - 1

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     Next
 </button> -->
 
+<img src = "../Alex-Ferguson.jpg", width="400", height="400"></img>
+
+
 <script>
 
 mode = 0
@@ -62,6 +65,7 @@ mode0Function();
 
 function mode0Function() {
 d3.select("p").html = "";
+d3.selectAll("p").remove();
 d3.selectAll("p").remove();
 d3.select("body").append("p").text("Summary of All Managers performance since Sir Alex Ferguson");
 }
