adding manager picture - 1

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ mode0Function();
 function mode0Function() {
 d3.select("p").html = "";
 d3.selectAll("p").remove();
-d3.selectAll("p").remove();
+d3.selectAll("img").remove();
 d3.select("body").append("p").text("Summary of All Managers performance since Sir Alex Ferguson");
 }
 
