adding manager picture - 1

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     Next
 </button> -->
 
-<img src = "../Alex-Ferguson.jpg", width="400", height="400"></img>
+<img src="http://akarshkb.github.io/Alex-Ferguson.jpg", width="400", height="400"></img>
 
 
 <script>
