--- a/index.html
+++ b/index.html
@@ -76,9 +76,7 @@ d3.select("p").html = "";
 d3.selectAll("p").remove();
 d3.selectAll("img").remove();
 d3.select("body").append("p").text("SIR ALEX FERGUSON");
-ImagePath = "C:\Users\Akarshkb\Desktop\CS416FP\Alex-Ferguson"
-d3.select("body").append("img").attr("src", ImagePath)
-
+d3.select("svg").append("image").attr('xlink:href', 'https://www.britannica.com/biography/Alex-Ferguson#/media/1/1799986/179540').attr("width", 200).attr("height", 200)
 
 }
 
@@ -121,6 +119,7 @@ d3.select("body").append("p").text("SUMMARY");
 
 </script>
 <p>Summary of All Managers performance since Sir Alex Ferguson</p>
-
+<svg>
+</svg>
 
 </body></html>
