adding crest picture - 1

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     Next
 </button> -->
 
-<img src="http://akarshkb.github.io/Manchester-United-Crest.jpg", width="400", height="400"></img>
+<img src="http://akarshkb.github.io/Manchester-United-Crest.jpg", width="600", height="400"></img>
 
 <script>
 
@@ -75,7 +75,7 @@ d3.select("p").html = "";
 d3.selectAll("p").remove();
 d3.selectAll("img").remove();
 d3.select("body").append("p").text("SIR ALEX FERGUSON");
-d3.select("body").append("image").attr("src", "http://akarshkb.github.io/Alex-Ferguson.jpg").attr("width", '200').attr("height", '200');
+d3.select("body").append("img").attr("src", "http://akarshkb.github.io/Alex-Ferguson.jpg").attr("width", '200').attr("height", '200');
 }
 
 function mode2Function() {
