adding all manager pictures

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ d3.select("p").html = "";
 d3.selectAll("p").remove();
 d3.selectAll("img").remove();
 d3.select("body").append("p").text("Summary of All Managers performance since Sir Alex Ferguson");
+d3.select("body").append("img").attr("src", "http://akarshkb.github.io/Manchester-United-Crest.jpg").attr("width", '400').attr("height", '400');
 }
 
 
@@ -76,7 +77,7 @@ d3.select("p").html = "";
 d3.selectAll("p").remove();
 d3.selectAll("img").remove();
 d3.select("body").append("p").text("SIR ALEX FERGUSON");
-d3.select("body").append("img").attr("src", "http://akarshkb.github.io/Alex-Ferguson.jpg").attr("width", '200').attr("height", '200');
+d3.select("body").append("img").attr("src", "http://akarshkb.github.io/Alex-Ferguson.jpg").attr("width", '400').attr("height", '400');
 }
 
 function mode2Function() {
@@ -84,34 +85,39 @@ d3.select("p").html = "";
 d3.selectAll("p").remove();
 d3.selectAll("img").remove();
 d3.select("body").append("p").text("DAVID MOYEZ");
-
+d3.select("body").append("img").attr("src", "http://akarshkb.github.io/David-Moyez.jpg").attr("width", '400').attr("height", '400');
 }
 
 
 function mode3Function(){
 d3.select("p").html = "";
 d3.select("p").remove();
+d3.selectAll("img").remove();
 d3.select("body").append("p").text("LOUIS VAN GAAL");
+d3.select("body").append("img").attr("src", "http://akarshkb.github.io/LVG.jpg").attr("width", '400').attr("height", '400');
 }
 
 
 function mode4Function(){
 d3.select("p").html = "";
 d3.select("p").remove();
+d3.selectAll("img").remove();
 d3.select("body").append("p").text("JOSE MOURINHO");
-
+d3.select("body").append("img").attr("src", "http://akarshkb.github.io/JM.jpg").attr("width", '400').attr("height", '400');
 
 }
 function mode5Function() {
 d3.select("p").html = "";
 d3.select("p").remove();
+d3.selectAll("img").remove();
 d3.select("body").append("p").text("OLE GUNNAR SOLSKJAER");
-
+d3.select("body").append("img").attr("src", "http://akarshkb.github.io/OGS.jpg").attr("width", '400').attr("height", '400');
 }
 
 function mode6Function(){
 d3.select("p").html = "";
 d3.select("p").remove();
+d3.selectAll("img").remove();
 d3.select("body").append("p").text("SUMMARY");
 }
 
