--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 
 <img src="http://akarshkb.github.io/Manchester-United-Crest.jpg", width="600", height="400"></img>
 
+<svg width="300" height="300">
 
+</svg>
 
 <script>
 
