adding pie chart 1

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@ function mode0Function() {
 d3.select("p").html = "";
 d3.selectAll("p").remove();
 d3.selectAll("img").remove();
+d3.selectAll("svg").remove();
 d3.select("body").append("p").text("Summary of All Managers performance since Sir Alex Ferguson");
 d3.select("body").append("img").attr("src", "http://akarshkb.github.io/Manchester-United-Crest.jpg").attr("width", '400').attr("height", '400');
 }
@@ -74,6 +75,7 @@ function mode1Function() {
 d3.select("p").html = "";
 d3.selectAll("p").remove();
 d3.selectAll("img").remove();
+d3.selectAll("svg").remove();
 d3.select("body").append("p").text("SIR ALEX FERGUSON");
 d3.select("body").append("img").attr("src", "http://akarshkb.github.io/Alex-Ferguson.jpg").attr("width", '400').attr("height", '400');
 var pie = d3.pie();
@@ -88,6 +90,7 @@ function mode2Function() {
 d3.select("p").html = "";
 d3.selectAll("p").remove();
 d3.selectAll("img").remove();
+d3.selectAll("svg").remove();
 d3.select("body").append("p").text("DAVID MOYEZ");
 d3.select("body").append("img").attr("src", "http://akarshkb.github.io/David-Moyez.jpg").attr("width", '600').attr("height", '400');
 }
@@ -97,6 +100,7 @@ function mode3Function(){
 d3.select("p").html = "";
 d3.select("p").remove();
 d3.selectAll("img").remove();
+d3.selectAll("svg").remove();
 d3.select("body").append("p").text("LOUIS VAN GAAL");
 d3.select("body").append("img").attr("src", "http://akarshkb.github.io/LVG.jpg").attr("width", '600').attr("height", '400');
 }
@@ -106,6 +110,7 @@ function mode4Function(){
 d3.select("p").html = "";
 d3.select("p").remove();
 d3.selectAll("img").remove();
+d3.selectAll("svg").remove();
 d3.select("body").append("p").text("JOSE MOURINHO");
 d3.select("body").append("img").attr("src", "http://akarshkb.github.io/JM.jpg").attr("width", '600').attr("height", '400');
 
@@ -114,6 +119,7 @@ function mode5Function() {
 d3.select("p").html = "";
 d3.select("p").remove();
 d3.selectAll("img").remove();
+d3.selectAll("svg").remove();
 d3.select("body").append("p").text("OLE GUNNAR SOLSKJAER");
 d3.select("body").append("img").attr("src", "http://akarshkb.github.io/OGS.jpg").attr("width", '600').attr("height", '400');
 }
@@ -122,6 +128,7 @@ function mode6Function(){
 d3.select("p").html = "";
 d3.select("p").remove();
 d3.selectAll("img").remove();
+d3.selectAll("svg").remove();
 d3.select("body").append("p").text("SUMMARY");
 }
 
