adding pie chart 1

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <script src='https://d3js.org/d3.v5.min.js'>
 </script>
-<body style="background-color:red;">
+<body>
 <!-- <button onclick="next()">
     Next
 </button> -->
