--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ var arc = d3.arc().innerRadius(50).outerRadius(100).startAngle(120).endAngle(360
 var svg = d3.select("body").append("svg").attr("width", 300).attr("height", 300);
 svg.attr("transform", "translate(300, 300)");
 color = ["green", "yellow", "black"];
-svg.selectAll("path").data(pie([895, 338, 267])).enter().append("path").attr("d", arc).attr("fill",function(d, i) {return color[i];});
+svg.selectAll("path").data(pie([895, 338, 267])).enter().append("path").attr("d", arc).attr("fill",function(d) {return c(d.value);});
 }
 
 function mode2Function() {
