--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@ d3.selectAll("svg").remove();
 d3.select("body").append("p").text("SIR ALEX FERGUSON");
 d3.select("body").append("img").attr("src", "http://akarshkb.github.io/Alex-Ferguson.jpg").attr("width", '400').attr("height", '400');
 var pie = d3.pie();
-var arc = d3.arc().innerRadius(50).outerRadius(100).startAngle(120).endAngle(360);
+var arc = d3.arc().innerRadius(50).outerRadius(100).startAngle(0).endAngle(360);
 var svg = d3.select("body").append("svg").attr("width", 300).attr("height", 300);
-svg.attr("transform", "translate(300, 300)");
-color = ["green", "yellow", "black"];
+//svg.attr("transform", "translate(300, 300)");
+//color = ["green", "yellow", "black"];
 svg.selectAll("path").data(pie([895, 338, 267])).enter().append("path").attr("d", arc).attr("fill",function(d) {return c(d.value);});
 }
 
