--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             d3.selectAll("img").remove();
             d3.selectAll("svg").remove();
             d3.select("body").append("p").text("Sir Alex Ferguson \(1986-2013\)");
-            d3.select("body").append("img").attr("src", "../saf.jpg").attr("width", '250');
+            d3.select("body").append("img").attr("src", "./SAF.jpg").attr("width", '250');
             
             data = [895, 338, 267]
 
