--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     
     <br></br>
 
-    <p style="text-align:center"><img src="./mu.png" class="center">
+    <p style="text-align:center"><img src="./mu.jpg" class="center">
     
     <script>
         mode = 0
