--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ how Manchester United have faired as a team since he left, and whether the newer
             d3.select("body").append("p").text("Sir Alex Ferguson is widely regarded as one of the greatest managers of all time, if not the greatest. He won several trophies with Manchester United, multiple Premier League titles, and Champions League titles as well. ")
             .attr("style", "text-align:center");
             d3.select("body").append("p").text("Sir Alex Ferguson \(Managed MAN UTD between : 1986-2013\)");
-            d3.select("body").append("img").attr("src", "./saf.jpg").attr("width", '250').attr("height", '600');
+            d3.select("body").append("img").attr("src", "./SAF.jpg").attr("width", '250').attr("height", '600');
             
             data = [895, 338, 267]
 
@@ -94,7 +94,7 @@ how Manchester United have faired as a team since he left, and whether the newer
             d3.select("body").append("p").text("David Moyes was selected by Sir Alex Ferguson as the next manager of Manchester United. However, he failed to deliver results, and was sacked just after one year when Manchester United finished seventh in the Premier League. ")
             .attr("style", "text-align:center");
             d3.select("body").append("p").text("David Moyes \(2013-2014\)");
-            d3.select("body").append("img").attr("src", "./dm.jpg").attr("width", '250').attr("height", '600');
+            d3.select("body").append("img").attr("src", "./DM.jpg").attr("width", '250').attr("height", '600');
 
             data = [27, 9, 15]
 
@@ -124,7 +124,7 @@ how Manchester United have faired as a team since he left, and whether the newer
             d3.select("body").append("p").text("Jose Mourinho is a highly talented manager, and has a knack for managing underdog teams to wins titles. Although he did not win the Premiere League, he helped Manchester United to win the Europa league and FA cup. He was let go after two seasons when Manchester United finished 5th.")
             .attr("style", "text-align:center");
             d3.select("body").append("p").text("Jose Mourinho \(2016-2018\)");
-            d3.select("body").append("img").attr("src", "./jm.jpg").attr("width", '250').attr("height", '600');
+            d3.select("body").append("img").attr("src", "./JM.jpg").attr("width", '250').attr("height", '600');
 
             data = [84, 32, 28]
 
@@ -139,7 +139,7 @@ how Manchester United have faired as a team since he left, and whether the newer
             d3.select("body").append("p").text("A former Man Utd player himself, Ole Gunnar Solskjaer is arguably the best manager Manchester United have had since Sir Alex Ferguson. Although Manchester United have not won any titles with him, they have constitently finished in the top 4, qualified for the Champions League, and started new players from the youth team. Ole shows a lot of promise in building a young and resilient Man Utd team. ")
             .attr("style", "text-align:center");
             d3.select("body").append("p").text("Ole Gunnar Solskjaer \(2018-Present\)");
-            d3.select("body").append("img").attr("src", "./ogs.jpg").attr("width", '250').attr("height", '600');
+            d3.select("body").append("img").attr("src", "./OGS.jpg").attr("width", '250').attr("height", '600');
 
             data = [84, 34, 33]
 
