--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <h1 style="text-align:center"> CS 416 Final Project </h1>
         <h2 style="text-align:center"> Akarsh K Bhagavath </h2>
         <h3 style="text-align:center"> A compartive visualization of managers' performances at Manchester United</h3>
+        <h4 style="text-align:center"> Hover over the pie charts for more information.</h4>
     </div>
     <p style="text-align:center"> The following visualization compares the win rates of managers since Sir Alex Ferguson to look into 
 how Manchester United have faired as a team since he left, and whether the newer managers have done a better job. </p>
